force-app/main/default/objects/CST_Allowed_Combinations__c/CST_Allowed_Combinations__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>CST - dependency between role and user global area</description>
    <label>CST Allowed Combinations</label>
</CustomObject>