force-app/main/default/objects/CST_Allowed_Combinations__c/fields/Opportunity_Team_Roles__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Team_Roles__c</fullName>
    <description>These roles have to be use with given User global area. The name of roles are separated by comma.</description>
    <label>Opportunity Team Roles</label>
    <type>TextArea</type>
</CustomField>