force-app/main/default/objects/CST_Allowed_Combinations__c/fields/Unique_Team_Roles__c.field-meta.xml
<CustomField>
    <fullName>Unique_Team_Roles__c</fullName>
    <label>Unique Team Roles</label>
    <type>TextArea</type>
</CustomField>