force-app/main/default/objects/CST_Allowed_Combinations__c/fields/User_Global_Area__c.field-meta.xml
<CustomField>
    <fullName>User_Global_Area__c</fullName>
    <description>Name of Commercial Banking user global area. Users with this global area must be in specific roles.</description>
    <label>User Global Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>